# Instagram-Bot

./: README.md  pyproject.toml
src/instagram_bot/: __init__.py  auth.py  config.py  exceptions.py  main.py  messaging.py  scheduler.py
src/instagram_bot/automation/: driver.py
src/instagram_bot/utils/: __init__.py  profile_scrape.py  selectors.py
tests/: test_smoke.py
