#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
=================================================================== 
Project: Instagram Bot – Automate Instagram Messages 
File: pyproject.toml 
Author: Mobin Yousefi (GitHub: github.com/mobinyousefi) 
Created: 2025-10-20 
Updated: 2025-10-20 
License: MIT License (see LICENSE file for details)
=================================================================== 

Description: 
Project metadata, dependencies, and tool configs (ruff/black/pytest).

Usage: 
pip install -e .

Notes: 
- Uses Ruff + Black. 
- Targets Python 3.10+.

===================================================================
"""

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-bot-mobin"
version = "0.1.0"
description = "Automate Instagram messages with Selenium (educational)."
readme = "README.md"
authors = [{ name = "Mobin Yousefi", email = "" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "selenium>=4.22",
  "beautifulsoup4>=4.12",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "typing-extensions>=4.10; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi"
Issues = "https://github.com/mobinyousefi"

[project.scripts]
insta-bot = "instagram_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["instagram_bot", "instagram_bot.*"]

[tool.ruff]
line-length = 100
exclude = [".venv", "build", "dist"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["src"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
